# legis-pt-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py  main.py
src/legis_pt_rag/: __init__.py  cli.py  config.py  models.py
src/legis_pt_rag/api/: main.py  routes.py  state.py
src/legis_pt_rag/db/: schema.sql
src/legis_pt_rag/ingest/: chunker.py  fetcher.py  parser.py
src/legis_pt_rag/rag/: embeddings.py  llm.py  pipeline.py  store.py
tests/: conftest.py  fixture_crp.html  test_chunker.py  test_parser.py
